fix for weird wrapping in safari
The copyright info in the footer was wrapping on certain pages (mainly
Beer batches) only in Safari. The break was occuring at the hyphen in my
surname.

--- a/src/_includes/styles.css
+++ b/src/_includes/styles.css
@@ -303,6 +303,10 @@ main > .content {
   text-align: center;
 }
 
+.footer p {
+  word-break: keep-all;
+}
+
 .footer ul {
   margin: 0 0 var(--space);
   padding: 0;
